app/assets/stylesheets/tasks.scss
// Place all the styles related to the Tasks controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.container {
  padding: 70px 22px 70px 22px;
}

h1 {
  color: #000066;
}

.card {
  display: flex;
  margin: 0px 0px 20px 0px;
  position: relative;
  // z-index: -10;

  .task-name {
    font-size: 18px;
    padding: 5px 15px 5px 15px;
    width: 100%;
  }

  a {
    color: black;
    text-decoration: none;
    vertical-align: middle;
  }

  .btn {
    color: white;
  }
}

input[id*=task] {
  display: none;
}

label.checkbox {
  height: 20px;
  width: 20px;
}

.checkbox::before {
  background: white;
  border: 1px solid #000066;
  border-radius: 3px;
  box-sizing: border-box;
  content: '';
  display: flex;
  height: 18px;
  width: 18px;
  left: 0px;
  margin-top: -9px;
  position: absolute;
  top: 50%;
}

.checkbox::after {
  border-right: 2px solid white;
  border-bottom: 2px solid white;
  content: '';
  display: block;
  height: 12px;
  width: 6px;
  transform: rotate(45deg);
  left: 6px;
  margin-top: -7px;
  opacity: 0;
  position: absolute;
  top: 50%;
}

input[type=checkbox]:checked + .checkbox::before {
  background: #000066;
}

input[type=checkbox]:checked + .checkbox::after {
  opacity: 1;
}

.done {
  text-decoration: line-through;

  a {
    color: gray;
    text-decoration: none;
  }
}

.new-task-icon img {
  height: 60px;
  width: 60px;
  margin: 15px;
  position: fixed;
  bottom: 0;
  right: 0;
}

.timer-icon {
  margin: auto 0px;

  img {
    height: 25px;
    width: 25px;
  }
}

.field {
  height: 75px;
  border: 1px solid;
  border-color: #E5E5E5;
  border-left: transparent;
  border-right: transparent;
  padding: 0px 10px 0px 10px;
  margin-top: -1px;
  font-size: 16px;
  vertical-align: middle;
  display: flex;
  justify-content: space-between;
  align-items: center;
  
  input {
    border: transparent;
    margin-left: auto;
    font-size: 16px;
  }

  textarea {
    border: transparent;
    resize: none;
    width: 100%;
    height: 80%;
    font-size: 16px;
  }

  #task_name {
    width: 100%;
  }

  #task_date {
    text-align: right;
    width: 170px;
  }

  #task_time {
    text-align: right;
    width: 70px;
  }
}

.btn {
  display: inline-block;
  height: 40px;
  width: 100px;
  padding: 0.4em 1em;
  text-decoration: none;
  background: #000066;
  color: white;
  border-radius: 5px;
  transition: .4s;
  text-align: center;
  font-size: 18px;
}

.btn.btn-delete {
  background: gray;
}

#projects_url {
  text-decoration: none;
}

.timer {
  height: 100vh;
  color: white;
  background-color: #000066;
  text-align: center;

  .task-name {
    font-size: 24px;
    padding-top: 100px;
  }

  .task-timer {
    font-size: 64px;
    padding: 75px 0;
  }

  .edit_link {
    a{
      color: white;
      font-size: 24px;
    }
  }

  input[type="button"]{
    height: 80px;
    width: 80px;
    margin: 0 10px;
    border: solid 1px white;
    border-radius: 80px;
  }
}

.project {
  margin-bottom: 20px;
}

.project-name {
  font-size: 18px;
  color: #000066;
  margin-bottom: 15px;
  padding-bottom: 5px;
  border-bottom: solid 1px #000066;
}

.side_menu {
	position: fixed;
	top: 5px;
	left: 10px;
	display: inline-block;
}
/* menu */
.menu {
	position: fixed;
	top: 0;
	left: -100vw;
	width: 250px;
	height: 100%;
	cursor: pointer;
	-webkit-transition: 0.53s transform;
	        transition: 0.53s transform;
	-webkit-transition-timing-function: cubic-bezier(.38,.52,.23,.99);
	        transition-timing-function: cubic-bezier(.38,.52,.23,.99);
	background-color: #000066;
  
  ul {
    margin: 0;
    padding: 0;
  }

  li {
    list-style: none;

    a {
      display: block;
      padding: 10px 10px 10px 20px;
      text-decoration: none;
      color: #ffffff;
    }
  }
}

.side_menu #toggle {
	position: absolute;
  display: none;  
  opacity: 0;
}
.side_menu #toggle:checked ~ .menu {
	-webkit-transform: translateX(100vw);
	        transform: translateX(100vw);
}
/* menu toggle */
.side_menu #toggle ~ label {
  display: block;
  padding: 10px 0 0 5px;
	cursor: pointer;
	-webkit-transition: 0.5s transform;
	        transition: 0.5s transform;
	-webkit-transition-timing-function: cubic-bezier(.61,-0.38,.37,1.27);
	        transition-timing-function: cubic-bezier(.61,-0.38,.37,1.27);
	text-align: center;
  color: #333333;
}
.side_menu #toggle:checked ~ label {
	-webkit-transform: translateX(250px);
	        transform: translateX(250px);
}
.side_menu #toggle ~ label::before {
	font-family: 'FontAwesome';
  content: "";
  display: inline-block;
  width: 25px;
  height: 20px;
  background-image: image-url("menu_icon.png");
  background-size: contain;
  font-size: 28px;
}
.side_menu #toggle:checked ~ label::before {
  content: '×';
  color: white;
  background-image: none;
  position: absolute;
  top: 0px;
	left: 0px;
}

.tasks > label {
  display: block;
  padding : 15px;
  margin-bottom: 20px;
  line-height: 1;
  color : gray;
  border : 1px solid gray;
  cursor : pointer;
}

.tasks > input {
  display: none;
}

.completed_tasks .card {
  height: 0;
  overflow: hidden;
  margin: 0;
  // -webkit-transition: all 0.5s;
  // -moz-transition: all 0.5s;
  // -ms-transition: all 0.5s;
  // -o-transition: all 0.5s;
  // transition: all 0.5s;
}

[id*=completed_tasks]:checked ~ .completed_tasks .card{
  height: 100%;
  margin-bottom: 20px;
  opacity: 1;
}

